--- a/AnniversaryBirthdayReminder/src/AnniversaryBirthdayReminder.Api/appsettings.Development.json
+++ b/AnniversaryBirthdayReminder/src/AnniversaryBirthdayReminder.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AnniversaryBirthdayReminder_Dev;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=AnniversaryBirthdayReminder_Dev;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Cors": {
     "AllowedOrigins": [
