--- a/MovieTVShowWatchlist/src/MovieTVShowWatchlist.Api/appsettings.json
+++ b/MovieTVShowWatchlist/src/MovieTVShowWatchlist.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=MovieTVShowWatchlist;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=MovieTVShowWatchlist.db"
   },
   "Logging": {
     "LogLevel": {
