--- a/FamilyCalendarEventPlanner/src/FamilyCalendarEventPlanner.Api/FamilyCalendarEventPlanner.Api.csproj
+++ b/FamilyCalendarEventPlanner/src/FamilyCalendarEventPlanner.Api/FamilyCalendarEventPlanner.Api.csproj
@@ -9,6 +9,10 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="2.3.0" />
     <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
