--- a/FamilyCalendarEventPlanner/src/FamilyCalendarEventPlanner.Core/FamilyCalendarEventPlanner.Core.csproj
+++ b/FamilyCalendarEventPlanner/src/FamilyCalendarEventPlanner.Core/FamilyCalendarEventPlanner.Core.csproj
@@ -14,6 +14,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
   </ItemGroup>
 
