--- a/GroceryShoppingListApp/src/GroceryShoppingListApp.Api/appsettings.json
+++ b/GroceryShoppingListApp/src/GroceryShoppingListApp.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=GroceryShoppingListAppDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=GroceryShoppingListApp.db"
   },
   "Serilog": {
     "MinimumLevel": {
