--- a/DateNightIdeaGenerator/src/DateNightIdeaGenerator.Infrastructure/DateNightIdeaGenerator.Infrastructure.csproj
+++ b/DateNightIdeaGenerator/src/DateNightIdeaGenerator.Infrastructure/DateNightIdeaGenerator.Infrastructure.csproj
@@ -10,4 +10,13 @@
     <ProjectReference Include="..\DateNightIdeaGenerator.Core\DateNightIdeaGenerator.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
