--- a/DateNightIdeaGenerator/src/DateNightIdeaGenerator.Api/appsettings.json
+++ b/DateNightIdeaGenerator/src/DateNightIdeaGenerator.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=DateNightIdeaGeneratorDb;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=DateNightIdeaGeneratorDb;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
