--- a/ChoreAssignmentTracker/src/ChoreAssignmentTracker.Core/ChoreAssignmentTracker.Core.csproj
+++ b/ChoreAssignmentTracker/src/ChoreAssignmentTracker.Core/ChoreAssignmentTracker.Core.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.0" />
