--- a/ChoreAssignmentTracker/src/ChoreAssignmentTracker.Api/appsettings.json
+++ b/ChoreAssignmentTracker/src/ChoreAssignmentTracker.Api/appsettings.json
@@ -33,5 +33,11 @@
   "AllowedHosts": "*",
   "Cors": {
     "AllowedOrigins": ["http://localhost:4200", "http://localhost:3000"]
+  },
+  "Jwt": {
+    "Key": "YourSuperSecretKeyThatIsAtLeast32CharactersLong!",
+    "Issuer": "ChoreAssignmentTracker",
+    "Audience": "ChoreAssignmentTrackerUsers",
+    "ExpiryInMinutes": 60
   }
 }
