--- a/ContactManagementApp/src/ContactManagementApp.Api/ContactManagementApp.Api.csproj
+++ b/ContactManagementApp/src/ContactManagementApp.Api/ContactManagementApp.Api.csproj
@@ -10,19 +10,19 @@
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
+    <PackageReference Include="Serilog.Enrichers.Environment" Version="2.3.0" />
+    <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="5.0.0" />
-    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ChoreAssignmentTracker.Core\ChoreAssignmentTracker.Core.csproj" />
-    <ProjectReference Include="..\ChoreAssignmentTracker.Infrastructure\ChoreAssignmentTracker.Infrastructure.csproj" />
+    <ProjectReference Include="..\ContactManagementApp.Core\ContactManagementApp.Core.csproj" />
+    <ProjectReference Include="..\ContactManagementApp.Infrastructure\ContactManagementApp.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
