--- a/ContactManagementApp/src/ContactManagementApp.Infrastructure/ContactManagementApp.Infrastructure.csproj
+++ b/ContactManagementApp/src/ContactManagementApp.Infrastructure/ContactManagementApp.Infrastructure.csproj
@@ -12,17 +12,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ChoreAssignmentTracker.Core\ChoreAssignmentTracker.Core.csproj" />
+    <ProjectReference Include="..\ContactManagementApp.Core\ContactManagementApp.Core.csproj" />
   </ItemGroup>
 
 </Project>
