--- a/ProfessionalNetworkCRM/src/ProfessionalNetworkCRM.Api/appsettings.json
+++ b/ProfessionalNetworkCRM/src/ProfessionalNetworkCRM.Api/appsettings.json
@@ -20,5 +20,11 @@
   "Cors": {
     "AllowedOrigins": ["http://localhost:4200"]
   },
+  "Jwt": {
+    "Key": "YourSuperSecretKeyThatIsAtLeast32CharactersLong!",
+    "Issuer": "ProfessionalNetworkCRM",
+    "Audience": "ProfessionalNetworkCRM.Api",
+    "ExpiresInHours": 24
+  },
   "AllowedHosts": "*"
 }
