--- a/ProfessionalNetworkCRM/tests/ProfessionalNetworkCRM.Api.Tests/ProfessionalNetworkCRM.Api.Tests.csproj
+++ b/ProfessionalNetworkCRM/tests/ProfessionalNetworkCRM.Api.Tests/ProfessionalNetworkCRM.Api.Tests.csproj
@@ -9,6 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="NUnit" Version="4.0.1" />
